# pv

./: Makefile.am  Makefile.in  configure  configure.ac
debian/: changelog  control  copyright  rules
docs/: pv.1.md
po/: LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  fr.gmo  fr.po  pl.gmo  pl.po  pt.gmo  pt.po  pv.pot
src/include/: config-aux.h  config.h.in  options.h  pv-internal.h  pv.h
src/main/: debug.c  help.c  main.c  options.c  remote.c  version.c
src/pv/: cursor.c  display.c  elapsedtime.c  file.c  loop.c  number.c  signal.c  state.c  string.c  transfer.c  watchpid.c
tests/: Bug_-_Install_all_files.test  General_-_--pidfile.test  General_-_--size_argument_handling.test  Integrity_-_Large_file_support.test  Integrity_-_On_output_pipe_close.test  Integrity_-_When_adjusted_remotely.test  Memory_safety_-_Basic.test  Memory_safety_-_Remote_control_receiver.test  Memory_safety_-_Remote_control_sender.test  Modifiers_-_--direct-io.test  Terminal_-_Detect_width.test  Transfer_-_--remote.test  run-valgrind.sh  test-env.sh
